--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "react-lottie": "^1.2.3",
+    "react-scrollable-feed": "^1.3.1",
+    "socket.io": "^4.5.0",
+    "socket.io-client": "^4.5.0"
   }
 }
